Add protected service cleanup workflows
