# src/TorrentCore.Contracts/Maintenance/CleanupByDateResultDto.cs
@@ -1,0 +1,8 @@
+namespace TorrentCore.Contracts.Maintenance;
+
+public sealed class CleanupByDateResultDto
+{
+    public required DateOnly       UpToDate          { get; init; }
+    public required DateTimeOffset CutoffUtc         { get; init; }
+    public required int            DeletedRecordCount { get; init; }
+}
